force-app/main/default/objects/Gaming_Question__c/Gaming_Question__c.object-meta.xml
<CustomObject>
    <description>Questions de test gaming générées par IA (Groq LLaMA 3.3 70B), liées à une offre d emploi. Les réponses correctes restent côté serveur — jamais envoyées au client.</description>
    <label>Gaming Question</label>
    <nameField>
        <displayFormat>GQ-{00000}</displayFormat>
        <label>Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gaming Questions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>