force-app/main/default/objects/Gaming_Question__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <description>Réponse correcte (A/B/C/D pour MCQ/Puzzle, ou l ordre correct séparé par | pour order). N est JAMAIS envoyé au client LWC.</description>
    <label>Correct Answer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>