force-app/main/default/objects/Gaming_Question__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <description>Niveau de difficulté de la question.</description>
    <label>Difficulty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>easy</fullName><default>false</default><label>Facile</label></value>
            <value><fullName>medium</fullName><default>true</default><label>Moyen</label></value>
            <value><fullName>hard</fullName><default>false</default><label>Difficile</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>