force-app/main/default/objects/Gaming_Question__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <description>Offre d emploi (Job_Posting) à laquelle cette question est liée.</description>
    <label>Job Posting</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gaming Questions</relationshipLabel>
    <relationshipName>Gaming_Questions</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>