force-app/main/default/objects/Gaming_Question__c/fields/Option_A__c.field-meta.xml
<CustomField>
    <fullName>Option_A__c</fullName>
    <label>Option A</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>