force-app/main/default/objects/Gaming_Question__c/fields/Option_E__c.field-meta.xml
<CustomField>
    <fullName>Option_E__c</fullName>
    <description>Option E — utilisée uniquement pour les questions d ordonnancement à 5 étapes.</description>
    <label>Option E</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>