force-app/main/default/objects/Gaming_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <description>Texte de la question.</description>
    <label>Question Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>