force-app/main/default/objects/Gaming_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <description>Type de question : QCM, Puzzle logique, ou Ordonnancement.</description>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>mcq</fullName><default>true</default><label>QCM</label></value>
            <value><fullName>puzzle</fullName><default>false</default><label>Puzzle</label></value>
            <value><fullName>order</fullName><default>false</default><label>Ordonnancement</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>