force-app/main/default/objects/Gaming_Question__c/fields/Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>Time_Limit__c</fullName>
    <description>Temps imparti en secondes (20 pour hard, 25 pour medium, 30 pour easy, 35 pour order).</description>
    <defaultValue>25</defaultValue>
    <label>Time Limit (seconds)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>